feat: Add AWS Amplify DataStore models for Product and Vulnerability plus the integration of GraphQL API for query operations

--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -18,6 +18,6 @@
     </div>
     
 </div>
-<!--<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>-->
+<amplify-authenticator [hideSignUp]="true" variation="modal"></amplify-authenticator>
 <app-addproduct *ngIf=displayAddNewProduct></app-addproduct>
 <app-footer class="absolute left-0 bottom-0 min-w-full"></app-footer>
