--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,13 +1,14 @@
 
 <ng-container *ngIf="authService.authStatus === 'authenticated'">
-    <div id="profile" class="absolute top-0 right-0 p-4 rounded-lg">
-        <div class="flex items-center space-x-2">
+    <div class="profile-container absolute top-0 right-0 bg-sky-500 rounded-bl-full flex">
+        <div class="flex justify-end space-x-2 mt-1 mb-2 ml-5">
             <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" class="w-8 h-8">
-            <span class="font-semibold text-gray-800">{{ authService.user.username}}</span>
+            <span class="font-bold text-gray-800 m-1">{{ authService.user.signInDetails?.loginId?.substring(0, 2)?.toUpperCase()}}</span>
         </div>
-        <button id="sngout" (click)="authService.signOut()" class="mt-2 px-4 py-2 bg-sky-50 text-black font-medium rounded hover:bg-sky-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+        <button id="sngout" (click)="authService.signOut()" class="hidden pl-4 py-2 bg-sky-50 text-black font-medium rounded-bl-full hover:bg-sky-300 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
             Sign Out
         </button>
-        </div>
+        
+    </div>
 </ng-container>
 
